# grove

./: .gitignore  AGENTIC-FLOW-REPORT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bacon.toml
.github/workflows/: pr-publish.yml  release.yml
assets/: AGENT_BOOTSTRAP.md  AGENT_BOOTSTRAP_NO_TASK.md  AGENT_BOOTSTRAP_RESUME.md  AGENT_BOOTSTRAP_TASK.md  INTEGRATE_BOOTSTRAP.md  INTEGRATE_PROMPT.template.md  INTEGRATE_STATE.template.md  PROMPT.template.md  PROTOCOL.md  RALPH-LOOP.md  SHARED.md  loop-hook.sh
scripts/: devcontainer-integrate-e2e.sh  run-integration-tests.sh  sandbox-e2e.sh  sandbox-integrate-e2e.sh
src/: main.rs  models.rs  utils.rs
src/agent/: bootstrap.rs  hook.rs  integrate_deps.rs  integrate_seed.rs  loop_md.rs  mod.rs  seed.rs  setup.rs
src/bus/: mod.rs
src/commands/: add.rs  agents.rs  attach.rs  devcontainer.rs  init.rs  integrate.rs  loop_.rs  mod.rs  msg.rs  self_update.rs  spawn.rs
src/devcontainer/: ci_scrape.rs  mod.rs  preset.rs  stack.rs
src/git/: git_exec.rs  mod.rs  worktree_manager.rs  worktree_paths.rs
src/session/: backend.rs  container.rs  mod.rs  tmux.rs
test/integration/: agentic.hone  devcontainer.hone
