[package]
name = "grove"
version = "2.2.0-agentic.0"
edition = "2021"
authors = ["Panzax", "Safia Abdalla (upstream)"]
description = "Git worktree CLI + agentic multi-agent workflow (Panzax fork of captainsafia/grove)"
license = "MIT"
repository = "https://github.com/Panzax/grove"
homepage = "https://github.com/Panzax/grove"
keywords = ["git", "worktree", "cli", "agent", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6"
atty = "0.2"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
notify = "6"

[profile.release]
opt-level = "z"
lto = true
strip = true
